Fix Bug 1109065, align talk bubbles based on UX doc

--- a/app/css/buddyup.css
+++ b/app/css/buddyup.css
@@ -125,6 +125,11 @@
     display: flex;
     flex-flow: row;
     margin-top: .8rem;
+    margin-left: 1.5rem;
+}
+.discuss li.helper-comment {
+    margin-right: 1.5rem;
+    margin-left: 0;
 }
 .discuss .avatar {
     flex: 1 0 10%;
